--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
 
-  <include layout="@layout/content_main"/>
+    <include layout="@layout/content_main" android:id="@+id/include"/>
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/fab"
