--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -1,111 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".SetupActivity">
-    <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="377dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="256dp"
-            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/NameInputLayout"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" app:errorEnabled="true">
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:context=".SetupActivity">
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/NameInputLayout"
+    android:layout_width="377dp"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="256dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:errorEnabled="true"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Add your first name" android:inputType="text" android:singleLine="true"/>
-    </com.google.android.material.textfield.TextInputLayout>
-    <TextView
-            android:text="Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            app:layout_constraintBottom_toTopOf="@+id/NameInputLayout" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="347dp" android:layout_marginTop="23dp"
-            app:layout_constraintTop_toBottomOf="@+id/BirthdateInputLayout"/>
-    <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="377dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/BirthdateInputLayout"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginBottom="23dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:errorEnabled="true">
+    <com.google.android.material.textfield.TextInputEditText
+      android:id="@+id/Nameinput"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:hint="Add your first name"
+      android:inputType="text"
+      android:singleLine="true"/>
+  </com.google.android.material.textfield.TextInputLayout>
+  <TextView
+    android:id="@+id/textView2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="23dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="347dp"
+    android:text="Name"
+    app:layout_constraintBottom_toTopOf="@+id/NameInputLayout"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/BirthdateInputLayout"/>
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/BirthdateInputLayout"
+    android:layout_width="377dp"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="23dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:errorEnabled="true"
+    app:layout_constraintBottom_toTopOf="@+id/textView2"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView4">
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="date" android:singleLine="true"
-                android:id="@+id/BirthdayInput" android:clickable="true"
-                android:focusable="false" android:editable="false" android:focusableInTouchMode="false"/>
-    </com.google.android.material.textfield.TextInputLayout>
-    <TextView
-            android:text="Birthdate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="320dp"
-            app:layout_constraintBottom_toTopOf="@+id/BirthdateInputLayout"/>
-    <Button
-            android:text="Continue"
-            android:layout_width="377dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/button" android:layout_marginTop="37dp"
-            app:layout_constraintTop_toBottomOf="@+id/NameInputLayout" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="166dp" style="@android:style/Widget.Material.Light.Button"
-            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-    <TextView
-            android:text="I identify as a..."
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView5"
-            app:layout_constraintBottom_toTopOf="@+id/radioGroup" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="289dp"/>
-    <RadioGroup
-            android:layout_width="251dp"
-            android:layout_height="32dp" tools:layout_editor_absoluteY="188dp"
-            android:orientation="horizontal" android:id="@+id/radioGroup" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="134dp">
-        <RadioButton
-                android:text="Female"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/radioButton4" android:layout_weight="1"/>
-        <RadioButton
-                android:text="Male"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/radioButton5" android:layout_weight="1"/>
-    </RadioGroup>
-    <TextView
-            android:text="Looking for..."
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView6" android:layout_marginTop="18dp"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="302dp" app:layout_constraintBottom_toTopOf="@+id/radioGroup2"/>
-    <RadioGroup
-            android:layout_width="251dp"
-            android:layout_height="32dp"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginEnd="134dp" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/radioGroup2" android:layout_marginBottom="33dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView4">
-        <RadioButton
-                android:text="Female"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/radioButton6" android:layout_weight="1"/>
-        <RadioButton
-                android:text="Male"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/radioButton7" android:layout_weight="1"/>
-    </RadioGroup>
+    <com.google.android.material.textfield.TextInputEditText
+      android:id="@+id/BirthdayInput"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:clickable="true"
+      android:editable="false"
+      android:focusable="false"
+      android:focusableInTouchMode="false"
+      android:inputType="date"
+      android:singleLine="true"/>
+  </com.google.android.material.textfield.TextInputLayout>
+  <TextView
+    android:id="@+id/textView4"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="320dp"
+    android:layout_marginStart="8dp"
+    android:text="Birthdate"
+    app:layout_constraintBottom_toTopOf="@+id/BirthdateInputLayout"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+  <Button
+    android:id="@+id/ContinueButton"
+    style="@android:style/Widget.Material.Light.Button"
+    android:layout_width="377dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="37dp"
+    android:layout_marginBottom="166dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:text="Continue"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/NameInputLayout"
+    app:layout_constraintVertical_bias="0.0"/>
+  <TextView
+    android:id="@+id/textView5"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="162dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="289dp"
+    android:text="I identify as a..."
+    app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+  <RadioGroup
+    android:id="@+id/radioGroup"
+    android:layout_width="251dp"
+    android:layout_height="32dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="16dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="134dp"
+    android:orientation="horizontal"
+    app:layout_constraintBottom_toTopOf="@+id/textView6"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView5">
+    <RadioButton
+      android:id="@+id/radioButton4"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:text="Female"/>
+    <RadioButton
+      android:id="@+id/radioButton5"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:text="Male"/>
+  </RadioGroup>
+  <TextView
+    android:id="@+id/textView6"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="18dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="302dp"
+    android:text="Looking for..."
+    app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
+  <RadioGroup
+    android:id="@+id/radioGroup2"
+    android:layout_width="251dp"
+    android:layout_height="32dp"
+    android:layout_marginBottom="33dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="134dp"
+    android:orientation="horizontal"
+    app:layout_constraintBottom_toTopOf="@+id/textView4"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView6">
+    <RadioButton
+      android:id="@+id/radioButton6"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:text="Female"/>
+    <RadioButton
+      android:id="@+id/radioButton7"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:text="Male"/>
+  </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
