--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -7,39 +7,37 @@
   android:layout_height="match_parent"
   tools:context=".SetupActivity">
   <com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/NameInputLayout"
-    android:layout_width="377dp"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="256dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    app:errorEnabled="true"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView2">
+          android:id="@+id/NameInputLayout"
+          android:layout_width="377dp"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="256dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="8dp"
+          app:errorEnabled="true"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.444"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/textView2">
 
     <com.google.android.material.textfield.TextInputEditText
-      android:id="@+id/Nameinput"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:hint="Add your first name"
-      android:inputType="text"
-      android:singleLine="true"/>
+            android:id="@+id/Nameinput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Add your first name"
+            android:inputType="text"
+            android:singleLine="true"/>
   </com.google.android.material.textfield.TextInputLayout>
   <TextView
-    android:id="@+id/textView2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="23dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="347dp"
-    android:text="Name"
-    app:layout_constraintBottom_toTopOf="@+id/NameInputLayout"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/BirthdateInputLayout"/>
+          android:id="@+id/textView2"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="23dp"
+          android:layout_marginStart="16dp"
+          android:text="Name"
+          app:layout_constraintBottom_toTopOf="@+id/NameInputLayout"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/BirthdateInputLayout"/>
   <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/BirthdateInputLayout"
     android:layout_width="377dp"
@@ -65,30 +63,30 @@
       android:singleLine="true"/>
   </com.google.android.material.textfield.TextInputLayout>
   <TextView
-    android:id="@+id/textView4"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="320dp"
-    android:layout_marginStart="8dp"
-    android:text="Birthdate"
-    app:layout_constraintBottom_toTopOf="@+id/BirthdateInputLayout"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+          android:id="@+id/textView4"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="320dp"
+          android:layout_marginStart="16dp"
+          android:text="Birthdate"
+          app:layout_constraintBottom_toTopOf="@+id/BirthdateInputLayout"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"/>
   <Button
-    android:id="@+id/ContinueButton"
-    style="@android:style/Widget.Material.Light.Button"
-    android:layout_width="377dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="37dp"
-    android:layout_marginBottom="166dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:text="Continue"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/NameInputLayout"
-    app:layout_constraintVertical_bias="0.0"/>
+          android:id="@+id/ContinueButton"
+          style="@android:style/Widget.Material.Light.Button"
+          android:layout_width="377dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="37dp"
+          android:layout_marginBottom="166dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="8dp"
+          android:text="Continue"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/NameInputLayout"
+          app:layout_constraintVertical_bias="0.909" app:layout_constraintHorizontal_bias="0.555"/>
   <TextView
     android:id="@+id/textView5"
     android:layout_width="wrap_content"
@@ -97,12 +95,12 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="289dp"
     android:text="I identify as a..."
-    app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+    app:layout_constraintBottom_toTopOf="@+id/GenderRadioGroup"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
   <RadioGroup
-    android:id="@+id/radioGroup"
+    android:id="@+id/GenderRadioGroup"
     android:layout_width="251dp"
     android:layout_height="32dp"
     android:layout_marginTop="4dp"
@@ -115,53 +113,53 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView5">
     <RadioButton
-      android:id="@+id/radioButton4"
+      android:id="@+id/GenderFemaleButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="Female"/>
     <RadioButton
-      android:id="@+id/radioButton5"
+      android:id="@+id/GenderMaleButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:text="Male"/>
   </RadioGroup>
   <TextView
-    android:id="@+id/textView6"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="18dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="302dp"
-    android:text="Looking for..."
-    app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
+          android:id="@+id/textView6"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="14dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="302dp"
+          android:text="Looking for..."
+          app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/GenderRadioGroup" app:layout_constraintHorizontal_bias="0.555"/>
   <RadioGroup
-    android:id="@+id/radioGroup2"
-    android:layout_width="251dp"
-    android:layout_height="32dp"
-    android:layout_marginBottom="33dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="134dp"
-    android:orientation="horizontal"
-    app:layout_constraintBottom_toTopOf="@+id/textView4"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView6">
+          android:id="@+id/radioGroup2"
+          android:layout_width="251dp"
+          android:layout_height="32dp"
+          android:layout_marginBottom="33dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="134dp"
+          android:orientation="horizontal"
+          app:layout_constraintBottom_toTopOf="@+id/textView4"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="4dp">
     <RadioButton
-      android:id="@+id/radioButton6"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:text="Female"/>
+            android:id="@+id/radioButton6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Female"/>
     <RadioButton
-      android:id="@+id/radioButton7"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:text="Male"/>
+            android:id="@+id/radioButton7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Male"/>
   </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
