--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -133,12 +133,12 @@
           android:layout_marginStart="8dp"
           android:layout_marginEnd="302dp"
           android:text="Looking for..."
-          app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
+          app:layout_constraintBottom_toTopOf="@+id/LookingRadioGroup"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/GenderRadioGroup" app:layout_constraintHorizontal_bias="0.555"/>
   <RadioGroup
-          android:id="@+id/radioGroup2"
+          android:id="@+id/LookingRadioGroup"
           android:layout_width="251dp"
           android:layout_height="32dp"
           android:layout_marginBottom="33dp"
