Upload file to storage bucket!

--- a/app/src/main/res/layout/activity_setup2.xml
+++ b/app/src/main/res/layout/activity_setup2.xml
@@ -6,6 +6,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Setup2Activity">
+    <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/ContinueButton" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="166dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:text="Continue"/>
     <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
@@ -22,13 +30,13 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="95dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="95dp"
             android:layout_marginTop="211dp" app:layout_constraintTop_toBottomOf="@+id/progressBar2"
-    />
+            android:scaleType="centerCrop"/>
     <Button
-            android:text="Upload Photo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/UploadButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:id="@+id/UploadButton" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="166dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="232dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:text="Upload Photo"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
